@@ -3,5 +3,6 @@
  * Fixed a syntax bug in uigtk.py when GTK version is < 2.10
  * Changed strings in text to be more literal and intuitive 
  * Added option (-debug) to show all console output)
+ * Add options to report errors in the system tray (blinking true). #7
 0.1:
  * Initial release
